# terminal-messenger

./: .gitignore  CMakeLists.txt  CoderDocumentation.md  LICENSE  README.md  TodoList.md
Client/: CMakeLists.txt  client.cpp  client.hpp  codes.hpp  main.cpp
Docs/: CoderDocumentation.md  TodoList.md
Server/: CMakeLists.txt  codes.hpp  main.cpp  server.cpp  server.hpp
